docs: document Bazel 6.5.0 JDK 21 incompatibility and testing results
- Add comprehensive troubleshooting section for Bazel 6.5.0 JDK 21 module access errors
- Document root cause: Bazel 6.5.0 predates JDK 21 and uses reflection on internal String APIs
- Update version matrix with JDK-specific compatibility status
- Add JDK 21 incompatibility markers for all JDK 21 distributions
- Document workaround: Use Bazel 7.4.1+ for JDK 21 compatibility
- Note: JDK 11/17 not available in RISC-V Debian repositories
- Mark Bazel 7.4.1 as currently testing on Banana Pi F3 with JDK 21
- Add version-specific known issues for both 6.5.0 and 7.4.1

Tested on Banana Pi F3 (SpacemiT K1 8-core, 16GB RAM, Debian RISC-V) with OpenJDK 21.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>